# RIBRAS-1

./: .gitignore  CMakeLists.txt  Dados_Ejectile.txt  Dados_Recoil.txt  Example.cc  G4Data0.heprep  GNUmakefile  Inputs.txt  README.md  Results.txt  Theta.txt  arquivobinario  compilar.sh  focal.sh  macro.sh  mass_table.txt  mass_table2.txt  tmp.mac  tree_run_0.root  tree_run_1.root  tree_run_10.root  tree_run_100.root  tree_run_101.root  tree_run_102.root  tree_run_103.root  tree_run_104.root  tree_run_105.root  tree_run_106.root  tree_run_107.root  tree_run_108.root  tree_run_109.root  tree_run_11.root  tree_run_110.root  tree_run_111.root  tree_run_112.root  tree_run_113.root  tree_run_114.root  tree_run_115.root  tree_run_116.root  tree_run_117.root  (+132 more)
ROOT/: Analysis.C  Analysis.h  Analysis_C.d  Analysis_C_ACLiC_dict_rdict.pcm  RMS.txt  analise.mac  root.c  rootlogon.C  tree_run_0.root  tree_run_1.root  tree_run_10.root  tree_run_100.root  tree_run_101.root  tree_run_102.root  tree_run_103.root  tree_run_104.root  tree_run_105.root  tree_run_106.root  tree_run_107.root  tree_run_108.root  tree_run_109.root  tree_run_11.root  tree_run_110.root  tree_run_111.root  tree_run_112.root  tree_run_113.root  tree_run_114.root  tree_run_115.root  tree_run_116.root  tree_run_117.root  tree_run_118.root  tree_run_119.root  tree_run_12.root  tree_run_120.root  tree_run_121.root  tree_run_122.root  tree_run_123.root  tree_run_124.root  tree_run_125.root  tree_run_126.root  (+968 more)
cmake/: CMakeCache.txt  Makefile  _DS_Store  cmake_install.cmake
include/: BeamTestPrimaryGeneratorAction.hh  BeamTestPrimaryGeneratorMessenger.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  MagneticField.hh  MagneticField2.hh  MagneticFieldMessenger.hh  SiHit.hh  (+9 more)
(+28 files in other folders)
